@@ -28,6 +28,8 @@ endif::[]
 
 * Add support for <<supported-databases, Redis Lettuce client>>
 * Add `context.message.age.ms` field for JMS message receiving spans and transactions - {pull}970[#970]
+* Instrument log4j Logger#error(String, Throwable) (#919)
+  Automatically captures exceptions when calling `logger.error("message", exception)`
 
 [float]
 ===== Bug Fixes
